
Github Actions:
- #7177 Create workflow for flatpak build support
- #7148 Fix unstable build for Windows core
- #7156 Change binary storage server
- #7161 Use brew bundle to install dependencies
- #7162 Add new distributions to CI
- #7167 Use changelog when creating deb files
- #7169 Remove temporary directory when building debs
- #7174 Show all workflows for Raspberry Pi

1.14.3
======

Bug fixes:
- #7135 Fix issue with function keys on macOS
- #7140 Configure scroll direction on a per-computer basis
- #7141 Code refactoring for the configure scroll direction task

1.14.2
======

Bug fixes:
- #7070 Radio button shifted focus on macOS
- #7038 Client and server different keyboard layout errors
- #7078 Clipboard re-enables automatically
- #7077 Broken Ubuntu, CentOS and Debian build
- #7080 Trace if the system can't open file with trusted fingerprints
- #7081 Dialog shouldn't appear for autoconfig functionality
- #7082 Windows client doesn't resume connection after sleep
- #7089 Modifier keys don't work on Microsoft Remote Desktop
- #7091 Broken CMakeFileList for unittests
- #7092 Runs after quit on Linux
- #7095 Update account and upgrade links
- #7096 The system duplicates hotkeys in setup
- #7099 Compilation broken with msvc 2014
- #7100 No configuration available on Windows
- #7097 The title "Enterprise" disappeares after clicking on "Preferences"
- #7108 Wrong characters on client for unicode
- #7114 Problem with reading languages on Linux system
- #7115 Prevent notifications if language reading fails

Enhancements:
- #7068 Restart when settings changed
- #7072 Run synergy as a pre-login agent
- #7074 Restart when server settings changed

Github Actions:
- #1043 Upload to S3 feature on all OS
- #7098 Apple M1 runner
- #7103 Fix core builds
- #7109 Fix build version for M1 builds

1.14.1
======

Bug fixes:
- #7016 Fix script that generates version number
- #7006 Resolve code scanning issues
- #7012 Fix natural horizontal scrolling on Mac client